Changing input file desing & adding tooltip for icons

--- a/src/index.scss
+++ b/src/index.scss
@@ -130,6 +130,11 @@ body {
             cursor: pointer;
 
         }
+
+        // Uplaod Image
+        #fileUpload {
+            display: none;
+        }
     }
 
     // Img
