--- a/src/index.scss
+++ b/src/index.scss
@@ -19,7 +19,7 @@ body {
   overflow-x: hidden;
   background-color: #121212;
   color: white;
-  font: bold 2rem 'Sigmar One', cursive;
+  font: bold 2rem sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
